cmake_minimum_required(VERSION 2.6)
project (cjson C)

IF (MSVC)
    include (MSVC)
    MSVC_SET_WARNING_LEVEL(3)
ENDIF (MSVC)

SET (LIB_SRC cJSON.c cJSON.h)
ADD_LIBRARY (cjson ${LIB_SRC})

set (CJSON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "cJSON headers")
set (CJSON_LIBRARIES cjson CACHE INTERNAL "cJSON libraries")

IF(UNIX AND NOT APPLE)
    FIND_LIBRARY(UNIX_MATH_LIBRARY m)
    SET(CJSON_LIBRARIES ${CJSON_LIBRARIES} ${UNIX_MATH_LIBRARY} CACHE INTERNAL "cJSON libraries")
ENDIF()
            
IF (MSVC)
    MSVC_CRT_SECURE_NO_WARNINGS (cjson)
ENDIF (MSVC)
