cmake_minimum_required(VERSION 2.6)
project (cjson C)

SET (LIB_SRC cJSON.c cJSON.h)
ADD_LIBRARY (cjson ${LIB_SRC})

set (CJSON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "cJSON headers")
set (CJSON_LIBRARIES cjson CACHE INTERNAL "cJSON libraries")

IF(UNIX AND NOT APPLE)
    FIND_LIBRARY(UNIX_MATH_LIBRARY m)
    SET(CJSON_LIBRARIES ${CJSON_LIBRARIES} ${UNIX_MATH_LIBRARY} CACHE INTERNAL "cJSON libraries")
ENDIF()

IF (MSVC)
  MACRO (MSVC_SET_WARNING_LEVEL level)
    IF(CMAKE_C_FLAGS MATCHES "/W[0-4]")
      STRING(REGEX REPLACE "/W[0-4]" "/W${level}" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
    ELSE()
      SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W${level}")
    ENDIF()
  ENDMACRO (MSVC_SET_WARNING_LEVEL)

  SET_TARGET_PROPERTIES (cjson PROPERTIES COMPILE_DEFINITIONS _CRT_SECURE_NO_WARNINGS)
  MSVC_SET_WARNING_LEVEL(3)
ENDIF (MSVC)

